# wam

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  WAM.c  WAM.h  WAM_def.h  example-read.c  example-write.c  example.c  fast-setup.sh  macros.cmake
riscv/: README.md  curl.cmake  iota.c_riscv.patch
